--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app/server",
+    //"dev": "nodemon app/server",
     "start": "node app/server.js"
   },
   "keywords": [],
