--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app/server"
+    "dev": "nodemon app/server.js",
+    "start": "nodemon app/server.js"
+
   },
   "keywords": [],
   "author": "",
