--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node app/server",
-    "start": "node app/server"
+    "start": "node app/server.js"
   },
   "keywords": [],
   "author": "",
